# vulnapi

./: .gitignore  INSTALL.md  PROJECT_SPEC.md  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
implementations/go-gin/: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  main.go
implementations/java-spring/: .dockerignore  .gitignore  Dockerfile  README.md  pom.xml
implementations/java-spring/src/main/java/com/apisecuritydojo/: DojoApplication.java
implementations/java-spring/src/main/java/com/apisecuritydojo/config/: CorsConfig.java  SecurityConfig.java
implementations/java-spring/src/main/java/com/apisecuritydojo/controller/: AuthController.java  DocsController.java  FlagController.java  LegacyController.java  ProductController.java  RootController.java  ToolController.java  UserController.java
implementations/java-spring/src/main/java/com/apisecuritydojo/graphql/: GraphQLConfig.java  GraphQLController.java
implementations/java-spring/src/main/java/com/apisecuritydojo/service/: DatabaseInitializer.java  JwtService.java
implementations/java-spring/src/main/java/com/vulnapi/: VulnApiApplication.java
implementations/java-spring/src/main/resources/: application.properties  vulnerabilities.json
implementations/node-express/: .dockerignore  README.md  package-lock.json  package.json
implementations/node-express/src/: database.js  index.js
implementations/node-express/src/graphql/: schema.js
implementations/node-express/src/middleware/: auth.js  injection.js
implementations/node-express/src/routes/: auth.js  flags.js  products.js  tools.js  users.js
implementations/php-laravel/: .dockerignore  .gitignore  Dockerfile  README.md  index.php  vulnerabilities.json
implementations/python-fastapi/: .dockerignore  .env.example  pyproject.toml  requirements.txt
implementations/python-fastapi/app/: __init__.py  main.py  seed.py
implementations/python-fastapi/app/challenges/: __init__.py
implementations/python-fastapi/app/docs/: __init__.py
implementations/python-fastapi/app/graphql/: __init__.py
implementations/python-fastapi/app/models/: flag.py  order.py  product.py  user.py
implementations/python-fastapi/app/routers/: __init__.py  docs.py  tools.py
implementations/python-fastapi/app/vulnerabilities/: __init__.py  auth.py  injection.py
implementations/python-fastapi/frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
implementations/python-fastapi/frontend/src/: App.tsx  index.css
implementations/python-fastapi/frontend/src/components/: Layout.tsx
implementations/python-fastapi/frontend/src/contexts/: BackendContext.tsx
implementations/python-fastapi/frontend/src/pages/: ApiConsole.tsx  ChallengeDetail.tsx  Challenges.tsx  Dashboard.tsx  GraphQLConsole.tsx
implementations/python-fastapi/frontend/src/services/: api.ts
implementations/python-fastapi/frontend/src/types/: index.ts
implementations/python-fastapi/tests/: __init__.py
implementations/python-fastapi/tests/exploits/: __init__.py  test_graphql.py  test_other_vulns.py  test_v01_bola.py  test_v02_auth.py  test_v06_sqli.py  test_v07_cmdi.py
implementations/rust-actix/src/: main.rs
implementations/rust-actix/src/api/: legacy.rs
implementations/rust-actix/src/graphql/: mod.rs
specs/: challenges.json
tests/: README.md  __init__.py  pytest.ini  requirements.txt
tests/cross-implementation/: __init__.py  conftest.py  run_tests.sh  test_graphql_vulnerabilities.py  test_health.py
