[project]
name = "api-security-dojo-tests"
version = "0.2.0"
description = "Cross-implementation tests for API Security Dojo"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# No package to build - tests only
packages = []

# =============================================================================
# Hatch Environments
# =============================================================================

[tool.hatch.envs.default]
skip-install = true
dependencies = [
    "httpx>=0.26.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.envs.default.scripts]
# Run all cross-implementation tests
test = "pytest tests/cross-implementation/ -v {args}"

# Test specific vulnerability categories
rest = "pytest tests/cross-implementation/test_rest_vulnerabilities.py -v {args}"
graphql = "pytest tests/cross-implementation/test_graphql_vulnerabilities.py -v {args}"
health = "pytest tests/cross-implementation/test_health.py -v {args}"

# Test specific backends (set DOJO_BACKENDS env var)
python = "DOJO_BACKENDS=python pytest tests/cross-implementation/ -v {args}"
go = "DOJO_BACKENDS=go pytest tests/cross-implementation/ -v {args}"
php = "DOJO_BACKENDS=php pytest tests/cross-implementation/ -v {args}"
java = "DOJO_BACKENDS=java pytest tests/cross-implementation/ -v {args}"
node = "DOJO_BACKENDS=node pytest tests/cross-implementation/ -v {args}"

# Test specific vulnerability
v01 = "pytest tests/cross-implementation/ -v -k V01 {args}"
v06 = "pytest tests/cross-implementation/ -v -k V06 {args}"
g01 = "pytest tests/cross-implementation/ -v -k G01 {args}"

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"
markers = [
    "asyncio: mark test as async",
]
